--- a/extra.css
+++ b/extra.css
@@ -3,6 +3,29 @@ body{
     overflow-x: hidden;
 }
 
+a:hover:before,.link:hover:before{position: absolute; left:0; bottom: 0; width: 0%; transition: 1s ease;}
+@media (min-width:1100px){
+    .large6{width: 49%; height: 500px;}
+}
+.cfa{
+    padding: 10px;
+    font-size: 20px;
+}
+.zi2{margin: 5px;}
+.pivot_container button{
+    font-size: 16px;
+}
+.pivot_container{
+    margin-left: -10px;
+    position: fixed;
+    top: 0;
+}
+.topnav{
+    position: sticky;
+    top: 0;
+    display: block;
+    margin: auto;
+}
 .spkimg{
     display: block;
     width: 30%;
@@ -11,13 +34,13 @@ body{
 }
 .bottom-left{
     position:absolute;
-    bottom: 80px;
+    bottom: 50px;
     left: 50px;
-    font-size: 43px;
+    font-size: 36px;
 }
 .bottom-l{
     position: absolute;
-    bottom: 70px;
+    bottom: 40px;
     left:50px;
 }
 .c-left{
@@ -33,9 +56,12 @@ body{
 }
 
 .fullscreen{
+    display: inline-block;
     width: 105%;
     margin-left: -2%;
     padding-left: 2%;
+    height: auto;
+    position: relative;
 }
 
 .heading{font-size: 56px;}
@@ -46,9 +72,21 @@ body{
     .spkimg{
         display: block;
         width: 60%;
+        position: relative;
+        margin-top: 30%;
     }
 
     .heading{font-size: 36px;}
     .tagline{font-size: 24px;}
 }
 
+@media (min-width:641px) and (max-width: 1099px){
+    .spkimg{
+        display: block;
+        width: 60%;
+        position: relative;
+        margin-top: 25%;
+    }
+    
+    .large6{width: 48%; height: 700px;}
+}
