--- a/extra.css
+++ b/extra.css
@@ -3,6 +3,46 @@ body{
     overflow-x: hidden;
 }
 
+.grad{
+    background: linear-gradient(45deg, red, purple, pink);
+    background-size: 400%;
+    animation: gradientBG 10s ease-in-out infinite;
+}
+
+@keyframes gradientBG {
+	0% {
+		background-position: 0% 20%;
+	}
+	50% {
+        background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 20%;
+	}
+}
+
+
+.bigx{
+    z-index: 1; background: url(bigx.png); height: 1000px;
+    opacity: 1;
+    animation: bigx 2s ease-in-out;
+}
+
+@keyframes bigx{
+    0% {
+        opacity: 0;
+        transform: scale(1.3);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1.0);
+    }
+}
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 a:hover:before,.link:hover:before{position: absolute; left:0; bottom: 0; width: 0%; transition: 1s ease;}
 @media (min-width:1100px){
     .large6{width: 49%; height: 500px;}
@@ -78,6 +118,9 @@ a:hover:before,.link:hover:before{position: absolute; left:0; bottom: 0; width: 
 
     .heading{font-size: 36px;}
     .tagline{font-size: 24px;}
+    
+    .bigx{z-index: 1; background: url(bigxphone.png); height: 700px; width: 100%; background-repeat: no-repeat;}
+
 }
 
 @media (min-width:641px) and (max-width: 1099px){
@@ -89,4 +132,6 @@ a:hover:before,.link:hover:before{position: absolute; left:0; bottom: 0; width: 
     }
     
     .large6{width: 48%; height: 700px;}
+
+    .bigx{z-index: 1; background: url(bigxmed.png); height: 720px; width: 100%; background-repeat: no-repeat;}
 }
