--- a/extra.css
+++ b/extra.css
@@ -4,15 +4,15 @@ body{
 }
 
 .grad{
-    background: linear-gradient(45deg, red, purple, pink);
+    background: linear-gradient(30deg, red 15%, pink 40%, purple 70%, red 100%);
     background-size: 400%;
     animation: gradientBG 10s ease-in-out infinite;
 }
 
 @keyframes gradientBG {
 	0% {
-		background-position: 0% 20%;
-	}
+        background-position: 0% 20%;
+    }
 	50% {
         background-position: 100% 50%;
 	}
@@ -23,10 +23,9 @@ body{
 
 
 .bigx{
-    z-index: 1; background: url(bigx.png); height: 1000px;
-    opacity: 1;
     animation: bigx 2s ease-in-out;
 }
+
 
 @keyframes bigx{
     0% {
