Added Team Info

--- a/extra.css
+++ b/extra.css
@@ -227,3 +227,22 @@ a:hover:before,.link:hover:before{position: absolute; left:0; bottom: 0; width: 
 .vertical::-webkit-scrollbar{
     display: none;
 }
+
+.overlay h1{
+    position: absolute;
+    bottom: 25px;
+    left: 25%;
+    font-size: 28px;
+    text-align: center;
+}
+
+@media (max-width:640px){
+    .overlay h1{
+        position: absolute;
+        bottom: 25px;
+        left: 20%;
+        font-size: 16px;
+        text-align: center;
+    }
+    
+}
