Removed Footer From Speakers Page

--- a/extra.css
+++ b/extra.css
@@ -11,8 +11,7 @@ body{
 }
 
 * {
-  font-family: chalet;
-  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .team .horizontal div img{
