--- a/extra.css
+++ b/extra.css
@@ -10,6 +10,13 @@ body{
   src: url(chalet.otf);
 }
 
+.icon-large{
+    width: 60px;
+    height: 60px;
+    font-size: 22px;
+    font-weight: 900;
+}
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
